tests/ui/internal/internal-unstable-const.stderr
error: const-stable function cannot use `#[feature(const_fn_floating_point_arithmetic)]`
  --> $DIR/internal-unstable-const.rs:10:5
   |
LL |     1.0 + 1.0
   |     ^^^^^^^^^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | pub const fn foo() -> f32 {
   |
help: otherwise `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL + #[rustc_allow_const_fn_unstable(const_fn_floating_point_arithmetic)]
LL | pub const fn foo() -> f32 {
   |

error: aborting due to previous error

